[package]
name = "rust_kzg_node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.1.1" }
napi-derive = "3.1.1"
rust-kzg-blst = { git = "https://github.com/grandinetech/rust-kzg", package = "blst", features = ["parallel"] }
rayon = "1.7"
hex = "0.4"

[build-dependencies]
napi-build = "1.0.1"
