[package]
name = "rust_kzg_node"
version = "0.1.0"
edition = "2021"
description = "High-performance KZG library bridge for Node.js using rust-kzg-blst."

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.1.1", features = ["tokio_rt"] }
napi-derive = "3.1.1"
rust-kzg-blst = { git = "https://github.com/grandinetech/rust-kzg", package = "rust-kzg-blst", features = ["parallel", "c_bindings"] }
tokio = { version = "1.25", features = ["macros", "rt-multi-thread"] }
rayon = "1.7"
hex = "0.4"

[build-dependencies]
napi-build = "1.0.1"
